# Kortin-Enigma

./: .gitignore  LICENSE  Makefile  Makefile.am  README-brew.md  README-libxml2.md  README-openssl.md  README.md
.github/workflows/: build.yml  c-cpp.yml
break_enigma_v5/: Makefile  NBestList.c  NBestList.h  break_enigma.c  config.xml  enigma.c  enigma.h  scoreText.c  scoreText.h
docs/: README-libxml2.md  README-openssl.md  credits.txt
enigma/: Info.plist  configure.ac
enigma/src/: Makefile.am  add.h  addx.h  backend.c  cpu_crc32.c  emu_inc_rp_optimized.c  keyboard_layout.c  main.c  monitor.c  potfile.c  stdout.c  terminal.c  types.h
enigma2_v5/: Info.plist  Makefile  main.m
enigma_v3/: autogen.sh  configure.ac
enigma_v3/src/: add.h  air.h  bitmap.c  common.h  debugfile.c  dictstat.c  dispatch.c  emu_inc_rp.c  emu_inc_rp_optimized.h  enigmaRelease.entitlements  event.c  ext_iokit.c  ext_metal.m  ext_sysfs_amdgpu.c  ext_sysfs_cpu.c  hashcat.c  hlfmt.c  hwmon.c  interface.c  logfile.c  loopback.c  main.c  mpsp.c  outfile.c  pidfile.c  restore.c  rp.c  shared.c  shared.h  slow_candidates.c  status.c  status.h  stdout.c  straight.c  thread.h  tuningdb.c  user_options.c  wordlist.c  wordlist.h
enigma_v4/: Makefile  add.h  addx.h  main.c
enigma_v5/: Info.plist  Makefile  add.h  addx.h  main.c  main.m
share/: enigma.conf.txt  german.txt  norway1.xml  norway2.xml  partner.conf.txt
tools/: README.md  generator.s
tools/ca/: rootca.sh
tools/gordon/: README.md  compile.sh  gordon.php  gordonRelease.entitlements
tools/m/: Makefile  m.c
(+5 files in other folders)
